[workspace]
members = ["src/rstow-config", "src/rstow", "src/rstow-commands", "xtask", "src/rstow-args"]

resolver = "3"

[workspace.package]
version = "1.0.0"
authors = ["Chris Tisdale"]
readme = "README.md"
repository = "https://github.com/ChrisTisdale/rust-stow"
license = "GPL-3"
license-file = "LICENSE.md"
edition = "2024"
description = "A Rust implementation of the GNU stow utility for managing dotfiles. It is a symlink farm manager that takes separate packages of software and/or data and makes them appear to be installed in the same place. Features include stow, delete, and restow operations, simulation mode, directory folding, and regex-based ignore/override patterns."

[profile.release]
strip = true
lto = true
