[package]
name = "xtask"
version.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true

[dependencies.rstow-args]
path = "../src/rstow-args"

[dependencies]
anyhow = { version = "1.0.102" }
clap = { version = "4.6.1", features = ["color", "derive", "error-context", "help", "suggestions", "unicode", "wrap_help", "usage"] }
clap_mangen = { version = "0.3.0" }
