[package]
name = "rstow"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
readme.workspace = true
description.workspace = true

[dependencies.rstow-args]
path = "../rstow-args"

[dependencies]
tracing = { version = "0.1.44" }
